--- a/index.html
+++ b/index.html
@@ -6,10 +6,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sorting Visualiser</title>
   <link rel="stylesheet" href="/style.css">
-  <script src="./src/main.ts" type="module"></script>
+  <script src="./src/index.ts" type="module"></script>
 </head>
-<body>
-  <canvas id="canvas"></canvas>
-  <button id="sort-button">Sort</button>
+<body class="bg-slate-100 dark:bg-slate-900">
+  <div class="max-w-max mx-auto py-8 flex flex-col items-center gap-4">
+    <canvas id="canvas" class="p-4 bg-white border shadow-sm text-blue-500 dark:bg-slate-900 dark:text-blue-400"></canvas>
+    <div class="w-full grid grid-cols-2 gap-4">
+      <div class="p-4 grow rounded-md bg-white">
+        <h2 class="font-semibold text-lg">Choose Algorithm</h2>
+        <select id="algo-select" class="block w-full mt-3 rounded-md shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50">
+          <option value="bubble" selected default>Bubble sort</option>
+        </select>
+        <div class="mt-3 flex justify-end">
+          <button type="button" id="sort-button" class="h-10 px-5 bg-emerald-500 rounded-md font-semibold text-white cursor-pointer hover:bg-emerald-600">Sort</button>
+        </div>
+      </div>
+
+      <!-- @TODO implement -->
+      <div class="p-4 grow rounded-md bg-white">
+        <h2 class="font-semibold text-lg">Statistics</h2>
+        <ul class="mt-2 flex flex-col gap-2">
+          <li>
+            <span>Size:</span>
+            <span id="size"></span>
+          </li>
+          <li>
+            <span>Ops:</span>
+            <span id="ops"></span>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
