--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <script src="./src/index.ts" type="module"></script>
 </head>
 <body class="bg-slate-100 dark:bg-slate-900">
-  <div class="max-w-max mx-auto py-8 flex flex-col items-center gap-4">
-    <canvas id="canvas" class="p-4 bg-white border shadow-sm text-blue-500 dark:bg-slate-900 dark:text-blue-400"></canvas>
+  <div class="max-w-max mx-auto py-8">
+    <h1 class="text-2xl">Sorting Algorithm Visualiser</h1>
+    <canvas id="canvas" class="my-4 p-4 bg-white border shadow-sm text-blue-500 dark:bg-slate-900 dark:text-blue-400"></canvas>
     <div class="w-full grid grid-cols-2 gap-4">
       <div class="p-4 grow rounded-md bg-white">
         <h2 class="font-semibold text-lg">Choose Algorithm</h2>
