main: implement dropdown to select algorithm

--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
     <div class="w-full grid grid-cols-2 gap-4">
       <div class="p-4 grow rounded-md bg-white">
         <h2 class="font-semibold text-lg">Choose Algorithm</h2>
-        <select id="algo-select" class="block w-full mt-3 rounded-md shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50">
-          <option value="bubble" selected default>Bubble sort</option>
-        </select>
+        <select id="algorithm-select" class="block w-full mt-3 rounded-md shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50"></select>
         <div class="mt-3 flex justify-end">
           <button type="button" id="sort-button" class="h-10 px-5 bg-emerald-500 rounded-md font-semibold text-white cursor-pointer hover:bg-emerald-600">Sort</button>
         </div>
