--- a/index.html
+++ b/index.html
@@ -1,40 +1,80 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sorting Visualiser</title>
-  <script src="./src/index.ts" type="module"></script>
-</head>
-<body class="bg-slate-100 dark:bg-slate-900">
-  <div class="max-w-max mx-auto py-8">
-    <h1 class="text-2xl">Sorting Algorithm Visualiser</h1>
-    <canvas id="canvas" class="my-4 p-4 bg-white border shadow-sm text-blue-500 dark:bg-slate-900 dark:text-blue-400"></canvas>
-    <div class="w-full grid grid-cols-2 gap-4">
-      <div class="p-4 grow rounded-md bg-white">
-        <h2 class="font-semibold text-lg">Choose Algorithm</h2>
-        <select id="algorithm-select" class="block w-full mt-3 rounded-md shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50"></select>
-        <div class="mt-3 flex justify-end gap-2">
-          <button type="button" id="reset-button" class="h-10 px-5 bg-emerald-500 rounded-md font-semibold text-white cursor-pointer hover:bg-emerald-600">Reset</button>
-          <button type="button" id="sort-button" class="h-10 px-5 bg-emerald-500 rounded-md font-semibold text-white cursor-pointer hover:bg-emerald-600">Sort</button>
-        </div>
-      </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sorting Visualiser</title>
+    <script src="./src/index.ts" type="module"></script>
+  </head>
+  <body class="bg-slate-100 dark:bg-slate-900">
+    <aside
+      class="absolute inset-y-0 left-0 flex w-[350px] flex-col gap-8 bg-white p-8"
+    >
+      <header>
+        <h1 class="text-2xl">Sort algorithm visualiser</h1>
+      </header>
 
-      <div class="p-4 grow rounded-md bg-white">
-        <h2 class="font-semibold text-lg">Statistics</h2>
-        <ul class="mt-2 flex flex-col gap-2">
-          <li>
-            <span>Size:</span>
-            <span id="size"></span>
-          </li>
-          <li>
-            <span>Ops:</span>
-            <span id="ops"></span>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</body>
+      <main class="flex flex-col gap-6">
+        <section class="flex flex-col">
+          <label
+            for="algorithm-select"
+            class="cursor-pointer pb-2 text-lg font-semibold"
+            >Algorithm</label
+          >
+
+          <select
+            id="algorithm-select"
+            class="h-10 cursor-pointer rounded border-r-4 border-r-transparent px-2 outline outline-1 outline-offset-1 outline-gray-300 hover:shadow-sm hover:outline-gray-500 focus:shadow-sm focus:outline-indigo-400"
+          ></select>
+        </section>
+
+        <section class="flex flex-col">
+          <label
+            for="data-size"
+            class="cursor-pointer pb-2 text-lg font-semibold"
+            >Size</label
+          >
+
+          <input
+            id="data-size"
+            class="border-offset-1 h-10 cursor-pointer rounded border border-gray-300 bg-black/5 px-2 outline-none hover:shadow-sm"
+            type="number"
+            value="100"
+            readonly
+          />
+        </section>
+
+        <div class="flex justify-end gap-2">
+          <button
+            type="button"
+            id="reset-button"
+            class="h-9 cursor-pointer rounded px-5 font-semibold text-slate-600 transition-opacity hover:opacity-50"
+          >
+            Reset
+          </button>
+
+          <button
+            type="button"
+            id="sort-button"
+            class="h-9 cursor-pointer rounded bg-emerald-500 px-5 font-semibold text-white transition-colors hover:bg-emerald-500/80 active:bg-emerald-600/90"
+          >
+            Sort
+          </button>
+        </div>
+      </main>
+    </aside>
+
+    <main class="mx-auto max-w-max py-8">
+      <aside class="flex gap-4">
+        <span>Size: <span id="size"></span></span>
+        <span>Ops: <span id="ops"></span></span>
+      </aside>
+
+      <canvas
+        id="canvas"
+        class="my-4 rounded-xl border bg-white p-4 text-blue-500 shadow-sm dark:bg-slate-900 dark:text-blue-400"
+      ></canvas>
+    </main>
+  </body>
 </html>
