--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
       <canvas
         id="canvas"
         class="my-4 rounded-xl border bg-white p-4 text-blue-500 shadow-sm dark:bg-slate-900 dark:text-blue-400"
+        height="500"
+        width="1000"
       ></canvas>
     </main>
   </body>
